--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -23,4 +23,12 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+
 }
+
+@media (min-width: 992px) {
+  .center-nav {
+    justify-content: flex-start;
+  }
+}
+
