animation-home-routingAbout

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+  Reiciendis debitis placeat asperiores quasi?
+  Accusamus quod doloribus iste facere earum
+  expedita laudantium atque vero, illo, quas
+  harum fugiat magnam omnis eius.</p>
