--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-transparent">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" (click)="toggleMenu()" [attr.aria-expanded]="isMenuExpanded ? 'true' : 'false'" aria-label="Toggle navigation" [ngClass]="{'collapsed': !isMenuExpanded}">
@@ -9,15 +9,18 @@
     <div class="collapse navbar-collapse" [ngClass]="{'show': isMenuExpanded}" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 center-nav">
         <li class="nav-item">
-          <a class="nav-link" id="about" style="color: aqua;" aria-current="page" href="#">About</a>
+          <a class="nav-link" id="about" style="color: aqua;" aria-current="page" [routerLink]="['/about']">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="stories" style="color: aqua;" href="#">Data Telling</a>
+          <a class="nav-link" id="stories" style="color: aqua;" href="#">Stories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="stories" style="color: aqua;" [routerLink]="['/']">InfoStories</a> <!-- Update this line -->
         </li>
       </ul>
       <form class="d-flex" role="search">
         <!-- <button class="btn btn-outline-success" type="submit"> -->
-          <span class="input-group-text center-nav">
+          <span class="input-group-text center-nav" style="background-color: transparent;">
             <i class="fa fa-search" style="color: aqua;"></i>
             <span class="ms-1" style="color: aqua;">Search</span>
           </span>
