--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="cInnerContent">
-  <h1 class="header-section gs_reveal ipsType_center">InfoStrories</h1>
+  <h1 class="header-section gs_reveal ipsType_center">InfoStories</h1>
 
   <div class="features">
 
@@ -60,11 +60,3 @@
 
 </div>
 
-
-
-
-<header>
-   <a href="https://greensock.com/scrolltrigger">
-     <img class="greensock-icon" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/scroll-trigger-logo-light.svg" width="200" height="64" />
-  </a>
-</header>
