--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 
-<nav class="navbar navbar-expand-lg bg-transparent">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-transparent ">
+  <div class="container-fluid" >
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" (click)="toggleMenu()" [attr.aria-expanded]="isMenuExpanded ? 'true' : 'false'" aria-label="Toggle navigation" [ngClass]="{'collapsed': !isMenuExpanded}">
       <span [ngClass]="{'d-none': isMenuExpanded}" class="navbar-toggler-icon"></span>
@@ -12,19 +12,22 @@
           <a class="nav-link" id="about" style="color: aqua;" aria-current="page" [routerLink]="['/about']">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="stories" style="color: aqua;" href="#">Stories</a>
+          <a class="nav-link" id="stories" style="color: aqua;" [routerLink]="['/stories']">Stories</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="stories" style="color: aqua;" [routerLink]="['/']">InfoStories</a> <!-- Update this line -->
+          <a class="nav-link" id="stories" style="color: aqua;" [routerLink]="['/']">InfoStories</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <!-- <button class="btn btn-outline-success" type="submit"> -->
-          <span class="input-group-text center-nav" style="background-color: transparent;">
+      <ul class="navbar-nav">
+        <li class="nav-item center-nav">
+          <a class="nav-link" id="contact" style="color: aqua;" [routerLink]="['/contact']">Contact</a>
+        </li>
+      </ul>
+      <form class="d-flex"  role="search">
+          <span class="input-group-text center-nav" style="background-color: transparent; margin-top: 15px;">
             <i class="fa fa-search" style="color: aqua;"></i>
             <span class="ms-1" style="color: aqua;">Search</span>
           </span>
-        <!-- </button> -->
       </form>
     </div>
   </div>
