--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+/* #main{
+    background-color: rgb(224, 230, 246);
+} */
