create-module-stories

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,6 +20,11 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item center-nav">
+          <a class="nav-link" id="subscribe" style="color: aqua;" [routerLink]="['/subscribe']">subscribe</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item center-nav">
           <a class="nav-link" id="contact" style="color: aqua;" [routerLink]="['/contact']">Contact</a>
         </li>
       </ul>
