--- a/src/app/components/stories/stories.component.html
+++ b/src/app/components/stories/stories.component.html
@@ -183,32 +183,32 @@
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
+  <div class="album py-4 bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-lg-2 col-md-12 order-lg-1 order-md-2">
+        <div class="col-lg-2 col-md-12 order-lg-1 order-md-2 mt-4">
           <div class="dropdown d-lg-block d-block">
             <button class="btn btn-secondary dropdown-toggle w-100 w-lg-auto" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown 1
+              Sort
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action 1</a></li>
-              <li><a class="dropdown-item" href="#">Another action 1</a></li>
-              <li><a class="dropdown-item" href="#">Something else here 1</a></li>
+              <li><a class="dropdown-item" href="#">By most recent</a></li>
+              <li><a class="dropdown-item" href="#">By earliest</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Something else here 1</a></li> -->
             </ul>
           </div>
-          <div class="dropdown d-lg-block d-block mt-2">
+          <div class="dropdown d-lg-block d-block mt-2 mb-4">
             <button class="btn btn-secondary dropdown-toggle w-100 w-lg-auto" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown 2
+              Filter (0)
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action 2</a></li>
-              <li><a class="dropdown-item" href="#">Another action 2</a></li>
-              <li><a class="dropdown-item" href="#">Something else here 2</a></li>
+              <li><a class="dropdown-item" href="#">Topics</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Another action 2</a></li> -->
+              <!-- <li><a class="dropdown-item" href="#">Something else here 2</a></li> -->
             </ul>
           </div>
         </div>
-        <div class="col-lg-10 col-md-12 order-lg-2 order-md-1">
+        <div class="col-lg-10 col-md-12 order-lg-2 order-md-1 mt-4">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
