styles-line-chart

--- a/src/app/components/stories/module-stories/overdose/overdose.component.css
+++ b/src/app/components/stories/module-stories/overdose/overdose.component.css
@@ -1,5 +1,21 @@
 .line {
   fill: none;
-  stroke: steelblue;
+  /* stroke: steelblue; */
   stroke-width: 2px;
 }
+
+.male-line {
+  fill: none;
+  stroke: blue;
+  stroke-width: 2px;
+}
+
+.female-line {
+  fill: none;
+  stroke: green;
+  stroke-width: 2px;
+}
+
+
+
+
