--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,13 @@
 
-<div class="cInnerContent">
-  <h1 class="header-section gs_reveal ipsType_center">InfoStories</h1>
+ <div class="cInnerContent">
+  <h1 class="header-section gs_reveal ipsType_center">
+    <svg class="logo-animation" width="100" height="100" viewBox="0 0 100 100">
+      <line class="line1" x1="30" y1="20" x2="30" y2="80" />
+      <line class="line2" x1="30" y1="80" x2="70" y2="80" />
+      <circle class="circle" cx="30" cy="10" r="10" />
+      <text class="i-shape" x="30" y="65" text-anchor="middle">I</text>
+    </svg>
+  </h1>
 
   <div class="features">
 
