--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,21 +1,35 @@
 .input-group-text{
   border: transparent;
+
 }
 
 .navbar-toggler .navbar-toggler-icon {
   display: none;
+
+  /* color: rgb(131, 60, 210); */
 }
 
+.navbar-toggler{
+  border-color: transparent;
+  background-color: rgb(172, 122, 229);
+  color: rgb(131, 60, 210);
+}
 .navbar-toggler .close-icon {
   display: inline-block;
+  /* background-color: grey; */
+
 }
 
 .navbar-toggler.collapsed .navbar-toggler-icon {
   display: inline-block;
+  /* background-color: rgb(131, 60, 210); */
+
 }
 
 .navbar-toggler.collapsed .close-icon {
   display: none;
+  /* background-color: rgb(131, 60, 210); */
+
 }
 
 .center-nav {
@@ -33,6 +47,29 @@
 }
 
 .navbar {
-  border-bottom: 1px solid rgb(199, 212, 246);
-
+  border-bottom: 1px solid rgb(131, 60, 210);
 }
+
+#Infostories{
+  /* background-color: rebeccapurple; */
+  font-weight: bold;
+  -webkit-text-stroke-width: 2px;
+ -webkit-text-stroke-color: rgb(131, 60, 210);
+  -webkit-text-fill-color: transparent;
+  font-size: 32px;
+}
+
+@keyframes fillAnimation {
+  0% {
+    -webkit-text-fill-color: transparent;
+  }
+  100% {
+    -webkit-text-fill-color: rgb(131, 60, 210);
+  }
+}
+
+.animate-fill {
+  animation: fillAnimation 2s linear forwards;
+}
+
+
