--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,33 +9,33 @@
     <div class="collapse navbar-collapse" [ngClass]="{'show': isMenuExpanded}" id="navbarTogglerDemo02" >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 center-nav">
         <li class="nav-item">
-          <a class="nav-link" id="Infostories" style="color: rgb(131, 60, 210)"
+          <a class="nav-link" id="Infostories" style="color: rgb(8, 8, 223);"
           [class.animate-fill]="animateInfoStories"
           [routerLink]="['/']"
           (click)="toggleMenu()">InfoStories</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="about" style="color:rgb(131, 60, 210);" aria-current="page" [routerLink]="['/about']">About</a>
+          <a class="nav-link" id="about" style="color:rgb(8, 8, 223);" aria-current="page" [routerLink]="['/about']">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="stories" style="color: rgb(131, 60, 210);" [routerLink]="['/stories']">Stories</a>
+          <a class="nav-link" id="stories" style="color: rgb(8, 8, 223);" [routerLink]="['/stories']">Stories</a>
         </li>
 
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item center-nav">
-          <a class="nav-link" id="subscribe" style="color: rgb(131, 60, 210)" [routerLink]="['/subscribe']">subscribe</a>
+          <a class="nav-link" id="subscribe" style="color: rgb(8, 8, 223)" [routerLink]="['/subscribe']">subscribe</a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item center-nav">
-          <a class="nav-link" id="contact" style="color: rgb(131, 60, 210)" [routerLink]="['/contact']">Contact</a>
+          <a class="nav-link" id="contact" style="color: rgb(8, 8, 223)" [routerLink]="['/contact']">Contact</a>
         </li>
       </ul>
       <form class="d-flex"  role="search">
           <span class="input-group-text center-nav" style="background-color: transparent; margin-top: 15px;">
-            <i class="fa fa-search" style="color: rgb(131, 60, 210)"></i>
-            <span class="ms-1" style="color: rgb(131, 60, 210)">Search</span>
+            <i class="fa fa-search" style="color: rgb(8, 8, 223)"></i>
+            <span class="ms-1" style="color: rgb(8, 8, 223)">Search</span>
           </span>
       </form>
     </div>
