--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,52 +13,55 @@
 
     <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
       <div class="featured-image-container ipsGrid_span5 gs_reveal gs_reveal_fromLeft">
-        <div class="card">
-          <img width="479" src="https://picsum.photos/479/479?index=1" alt="">
+        <div class="card" style="background-color: rgb(228, 192, 48);">
+          <h1 class="animated animate__headShake" style="color: aliceblue; margin-top: 30%;" >ANIMATION</h1>
+          <!-- <img width="479" src="https://picsum.photos/479/479?index=1" alt=""> -->
         </div>
       </div>
 
       <div class="ipsGrid_span7 ipsType_left">
-        <h2 class="heading_large gs_reveal">Create amazing <strong>SVG</strong> animations</h2>
-        <p class="gs_reveal"><a href="https://greensock.com/drawsvg/">DrawSVGPlugin</a> allows you to progressively reveal (or hide) SVG strokes to make them look like they're being drawn. <a href="https://greensock.com/morphsvg/">MorphSVGPlugin</a> to Morph any SVG shape into any other shape smoothly regardless of the number of points in each. <a href="/docs/v3/Plugins/MotionPathPlugin">MotionPathPlugin</a> allows you to easily move any object along a path.</p>
+        <h2 class="heading_large gs_reveal">Amazing <strong style="color: rgb(8, 8, 223);"> ANIMATION</strong> Websites</h2>
+        <p class="gs_reveal"><a href="#"></a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, eligendi. Tempore ad error, natus in incidunt nemo illo voluptatibus, voluptates cum, nihil ullam doloribus expedita explicabo enim eum mollitia laboriosam.</p>
       </div>
     </div>
 
     <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
       <div class="ipsGrid_span7 ipsType_right">
-        <h2 class="heading_large gs_reveal">Supercharge immersive <strong>WebGL</strong> experiences</h2>
-        <p class="gs_reveal">GreenSock is used in some of the most popular <a href="//threejs.org/">Three.js</a> powered WebGL projects. Animate any object in a scene. <a href="https://greensock.com/PixiPlugin/">PixiPlugin</a> makes animating <a href="//www.pixijs.com/">Pixi.js</a> objects with GSAP a breeze. Animate position, scale, color effects and more with all the power and control of GSAP and the rendering speed of Pixi.js.</p>
+        <h2 class="heading_large gs_reveal">Creates super <strong style="color:rgb(8, 8, 223);">GRAPHS</strong></h2>
+        <p class="gs_reveal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, repudiandae voluptas ab, animi velit sequi impedit numquam facere eius perferendis eveniet quia nemo distinctio quaerat delectus eum?</p>
       </div>
 
       <div class="featured-image-container ipsGrid_span5 gs_reveal gs_reveal_fromRight">
-        <div class="card">
-          <img width="479" src="https://picsum.photos/479/479?index=2" alt="">
+        <div class="card" style="background-color: rgb(228, 129, 48);">
+          <h1 style="color: aliceblue; margin-top: 10%;" >PYTHON D3js <br> Rstudio Tableau</h1>
+
+          <!-- <img width="479" src="https://picsum.photos/479/479?index=2" alt=""> -->
         </div>
       </div>
     </div>
 
     <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
       <div class="featured-image-container ipsGrid_span5 gs_reveal gs_reveal_fromLeft">
-        <div class="card">
-          <img width="479" src="https://picsum.photos/479/479?index=3" alt="">
+        <div class="card" style="background-color: rgb(228, 78, 48);">
+          <!-- <img width="479" src="https://picsum.photos/479/479?index=3" alt=""> -->
         </div>
       </div>
 
       <div class="ipsGrid_span7 ipsType_left">
-        <h2 class="heading_large gs_reveal">Control performant <strong>Canvas</strong> animations</h2>
-        <p class="gs_reveal">GSAP makes animating with Canvas even easier by providing an easier way to look and sequence animations. GSAP works great with <a href="//www.adobe.com/products/animate.html">Adobe Animate</a> and <a href="//createjs.com/easeljs">EaseJS</a> through GSAP's <a href="https://greensock.com/easelplugin/">EaselJSPlugin</a>.</p>
+        <h2 class="heading_large gs_reveal">Data <strong style="color:rgb(8, 8, 223);">Visualization</strong></h2>
+        <p class="gs_reveal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam explicabo molestias praesentium fuga omnis quas! Soluta fugit quis repudiandae, aspernatur vel, quas cumque quisquam voluptas laudantium odit libero numquam molestias.</p>
       </div>
     </div>
 
     <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
       <div class="ipsGrid_span7 ipsType_right">
-        <h2 class="heading_large gs_reveal"><strong>Award winning</strong> websites</h2>
-        <p class="gs_reveal">GSAP is used on over 8,500,000 sites and over 1,000 sites featured on <a href="https://www.awwwards.com/websites/gsap-animation/" target="_blank">Awwwards</a>. For some of our favorites, check out <a href="https://greensock.com/showcase/">our showcase</a>.</p>
+        <h2 class="heading_large gs_reveal">Data <strong style="color:rgb(8, 8, 223);">StoryTelling</strong></h2>
+        <p class="gs_reveal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam nesciunt ab, deleniti iste suscipit nihil soluta in accusantium at culpa repudiandae quia tenetur aspernatur doloremque molestias eius commodi magni!</p>
       </div>
 
       <div class="featured-image-container ipsGrid_span5 gs_reveal gs_reveal_fromRight">
-        <div class="card">
-          <img width="479" src="https://picsum.photos/479/479?index=4" alt="">
+        <div class="card" style="background-color: rgb(141, 39, 169);">
+          <!-- <img width="479" src="https://picsum.photos/479/479?index=4" alt=""> -->
         </div>
       </div>
     </div>
