--- a/src/app/components/stories/stories.component.html
+++ b/src/app/components/stories/stories.component.html
@@ -178,7 +178,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">InfoStories Logo</h1>
+        <h1 class="fw-light" style="color: rgb(8, 8, 223);">Stories</h1>
       </div>
     </div>
   </section>
@@ -213,16 +213,16 @@
             <div class="col">
               <div class="card shadow-sm" >
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <title>Placeholder</title>
+                  <!-- <title>Placeholder</title> -->
                   <rect width="100%" height="100%" fill="#55595c"/>
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                  <text x="45%" y="50%" fill="#eceeef" dy=".3em">Read</text>
                 </svg>
 
                 <div class="card-body">
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/overdose']">View</button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/overdose']">View</button> -->
                       <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                     </div>
                     <small class="text-muted">9 mins</small>
