--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
-<app-header ></app-header>
-<div class="container" >
+<main>
+  <app-header></app-header>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
+</main>
 <!-- <app-home></app-home> -->
 
