--- a/src/app/components/stories/stories.component.css
+++ b/src/app/components/stories/stories.component.css
@@ -13,17 +13,74 @@
     }
   }
 
-  /* .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
 
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  } */
+
+/* new */
+#read{
+  color: rgb(255, 0, 238);
+  font-size: 52px;
+  font-family:Baguet Script;
+  margin-bottom: 70px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 3.5);
+}
+
+.card-text{
+  /* padding-top: 0; */
+  color:rgb(107, 107, 109);
+}
+
+.underline-heading {
+  color: black;
+  text-decoration: underline;
+  text-decoration-color: rgb(8, 8, 223) ;
+}
+
+.card-img-overlay {
+  position: relative;
+  display: inline-block;
+}
+
+.read-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.read-overlay span {
+  /* color: white; */
+  font-size: 24px;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.card-img-overlay:hover .read-overlay {
+  opacity: 1;
+  animation: fadeIn 1.5s forwards;
+}
+
+
+.card-img-overlay:hover .read-overlay span {
+  opacity: 1;
+  animation: fadeIn 1.5s forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
 
