navbar-style-location

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <nav class="navbar navbar-expand-lg bg-transparent ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
@@ -38,6 +38,87 @@
             <span class="ms-1" style="color: rgb(8, 8, 223)">Search</span>
           </span>
       </form>
+    </div>
+  </div>
+</nav>
+
+ -->
+
+<!--
+ <nav class="navbar navbar-expand-lg bg-transparent">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" (click)="toggleMenu()" [attr.aria-expanded]="isMenuExpanded ? 'true' : 'false'" aria-label="Toggle navigation" [ngClass]="{'collapsed': !isMenuExpanded}">
+      <span [ngClass]="{'d-none': isMenuExpanded}" class="navbar-toggler-icon"></span>
+      <span [ngClass]="{'d-none': !isMenuExpanded}" class="close-icon">X</span>
+    </button>
+    <div class="collapse navbar-collapse" [ngClass]="{'show': isMenuExpanded}" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 center-nav">
+        <li class="nav-item">
+          <a class="nav-link" id="Infostories" style="color: rgb(8, 8, 223);" [class.animate-fill]="animateInfoStories" [routerLink]="['/']" (click)="toggleMenu()">InfoStories</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" id="about" style="color:rgb(8, 8, 223);" aria-current="page" [routerLink]="['/about']">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="stories" style="color: rgb(8, 8, 223);" [routerLink]="['/stories']">Stories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="subscribe" style="color: rgb(8, 8, 223)" [routerLink]="['/subscribe']">subscribe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="contact" style="color: rgb(8, 8, 223)" [routerLink]="['/contact']">Contact</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <span class="input-group-text center-nav" style="background-color: transparent; margin-top: 15px;">
+          <i class="fa fa-search" style="color: rgb(8, 8, 223)"></i>
+          <span class="ms-1" style="color: rgb(8, 8, 223)">Search</span>
+        </span>
+      </form>
+    </div>
+  </div>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg bg-transparent">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" (click)="toggleMenu()" [attr.aria-expanded]="isMenuExpanded ? 'true' : 'false'" aria-label="Toggle navigation" [ngClass]="{'collapsed': !isMenuExpanded}">
+      <span [ngClass]="{'d-none': isMenuExpanded}" class="navbar-toggler-icon"></span>
+      <span [ngClass]="{'d-none': !isMenuExpanded}" class="close-icon">X</span>
+    </button>
+    <div class="collapse navbar-collapse" [ngClass]="{'show': isMenuExpanded}" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 center-nav" style="justify-content: start;">
+        <li class="nav-item">
+          <div class="left-nav">
+            <a class="nav-link" id="Infostories" style="color: rgb(8, 8, 223);" [class.animate-fill]="animateInfoStories" [routerLink]="['/']" (click)="toggleMenu()">InfoStories</a>
+          </div>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0 center-nav">
+
+        <li class="nav-item">
+          <a class="nav-link" id="about" style="color:rgb(8, 8, 223);" aria-current="page" [routerLink]="['/about']">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="stories" style="color: rgb(8, 8, 223);" [routerLink]="['/stories']">Stories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="subscribe" style="color: rgb(8, 8, 223)" [routerLink]="['/subscribe']">subscribe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="contact" style="color: rgb(8, 8, 223)" [routerLink]="['/contact']">Contact</a>
+        </li>
+        <form class="d-flex" role="search">
+          <span class="input-group-text center-nav" style="background-color: transparent; margin-top: 15px;">
+            <i class="fa fa-search" style="color: rgb(8, 8, 223)"></i>
+            <span class="ms-1" style="color: rgb(8, 8, 223)">Search</span>
+          </span>
+        </form>
+      </ul>
+
     </div>
   </div>
 </nav>
