--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,8 +5,6 @@
 
 .navbar-toggler .navbar-toggler-icon {
   display: none;
-
-  /* color: rgb(131, 60, 210); */
 }
 
 .navbar-toggler{
@@ -16,25 +14,20 @@
 }
 .navbar-toggler .close-icon {
   display: inline-block;
-  /* background-color: grey; */
 
 }
 
 .navbar-toggler.collapsed .navbar-toggler-icon {
   display: inline-block;
-  /* background-color: rgb(131, 60, 210); */
-
 }
 
 .navbar-toggler.collapsed .close-icon {
   display: none;
-  /* background-color: rgb(131, 60, 210); */
-
 }
 
 .center-nav {
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   flex-grow: 1;
 
@@ -42,16 +35,16 @@
 
 @media (min-width: 992px) {
   .center-nav {
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
 }
+
 
 .navbar {
   border-bottom: 1px solid rgb(8, 8, 223);
 }
 
 #Infostories{
-  /* background-color: rebeccapurple; */
   font-weight: bold;
   -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: rgb(8, 8, 223);
