no-circleCursor-hovering

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,9 @@
   'green-bg': isRouteActive('/stories'),
 }" (mousemove)="updateCursorPosition($event)">
   <div class="circle-cursor" [style.left.px]="cursorX" [style.top.px]="cursorY" *ngIf="!isHoveringHeaderNavLinks"></div>
-  <!-- <div class="circle-cursor" [style.left.px]="cursorX" [style.top.px]="cursorY" *ngIf="!isHoveringHeaderNavLinks"></div> -->
-
   <main>
-    <app-header (mousemove)="updateCursorPosition($event)" (mouseenter)="onHeaderMouseEnter()" (mouseleave)="onHeaderMouseLeave()"></app-header>
+    <app-header (mousemove)="updateCursorPosition($event)" (mouseenter)="onHeaderMouseEnter()" (mouseleave)="onHeaderMouseLeave()" (hoverHeaderNavLinks)="isHoveringHeaderNavLinks = $event"></app-header>
+
     <div class="container">
       <router-outlet></router-outlet>
     </div>
