--- a/src/app/components/stories/stories.component.html
+++ b/src/app/components/stories/stories.component.html
@@ -35,92 +35,89 @@
             </ul>
           </div>
         </div>
+
+
         <div class="col-lg-10 col-md-12 order-lg-2 order-md-1 mt-4">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" >
-            <div class="col" >
-              <div class="card" style="border: none;">
-                <a href="/overdose">
-                  <div class="card-img-overlay">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
-                      <rect width="100%" height="100%" style="fill: url(#image)" />
-                      <image id="image" href="../../../assets/images.jpeg" width="100%" height="100%" ></image>
-                    </svg>
-                    <div class="read-overlay" style="background-color: rgba(0, 106, 255, 0.231); box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); border-radius: 10px; ">
+            <div class="col">
+              <a href="/overdose"  class="card shadow-sm">
+
+                <div class="card-img-container">
+                  <img src="../../../assets/images.jpeg" alt="Image" class="card-img-top" />
+                  <div class="card-img-overlay">
+                    <div class="read-overlay"
+                    style="background-color: rgba(0, 106, 255, 0.231); box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
                       <h1 id="read">Read</h1>
                     </div>
-                    <h1 class="underline-heading">Overdose Deaths</h1><h2 style="color: gray;">from 2001-2021 in USA</h2>
-
-                  <!-- <h1 style="color:rgb(98, 98, 100);">Overdose Deaths</h1> -->
-
                   </div>
-                </a>
-
-                <div class="card-body">
-                  <!-- <h1 style="color:rgb(90, 90, 93) ;">Overdose Deaths</h1> -->
-                  <p class="card-text"></p>
                 </div>
-              </div>
+                <div class="card-body" >
+                  <h1>
+                    <span class="underline-heading">Overdose Deaths</span><span class="card-text">  from 2001-2021 in US</span>
+                  </h1>
+                </div>
+              </a>
             </div>
+
             <div class="col">
-              <div class="card shadow-sm">
-                <a href="/overdose">
+              <a href="/overdose"  class="card shadow-sm">
+
+                <div class="card-img-container">
+                  <img src="../../../assets/forest fire.jpg" alt="Image" class="card-img-top" />
                   <div class="card-img-overlay">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                      <!-- <title>Placeholder</title> -->
-                      <rect width="100%" height="100%" style="fill: url(#image)" />
-                      <image id="image" href="../../../assets/images.jpeg" width="100%" height="100%" ></image>
-                    </svg>
-                    <div class="read-overlay" style="background-color: rgba(0, 106, 255, 0.231);">
-                      <span style="color: rgb(255, 0, 238);">READ</span>
+                    <div class="read-overlay"
+                    style="background-color: rgba(0, 106, 255, 0.231); box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
+                      <h1 id="read">Read</h1>
                     </div>
                   </div>
-                </a>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-              </div>
+                <div class="card-body" >
+                  <h1>
+                    <span class="underline-heading">Title</span><span class="card-text">  something else....</span>
+                  </h1>
+                </div>
+              </a>
             </div>
+
             <div class="col">
-              <div class="card shadow-sm">
-                <a href="/overdose">
+              <a href="/overdose"  class="card shadow-sm">
+
+                <div class="card-img-container">
+                  <img src="../../../assets/Campervan.jpg" alt="Image" class="card-img-top" />
                   <div class="card-img-overlay">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                      <!-- <title>Placeholder</title> -->
-                      <rect width="100%" height="100%" style="fill: url(#image)" />
-                      <image id="image" href="../../../assets/images.jpeg" width="100%" height="100%" ></image>
-                    </svg>
-                    <div class="read-overlay" style="background-color: rgba(0, 106, 255, 0.231);">
-                      <span style="color: rgb(255, 0, 238);">READ</span>
+                    <div class="read-overlay"
+                    style="background-color: rgba(0, 106, 255, 0.231); box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
+                      <h1 id="read">Read</h1>
                     </div>
                   </div>
-                </a>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-              </div>
+                <div class="card-body" >
+                  <h1>
+                    <span class="underline-heading"></span>Title<span class="card-text">   something else....</span>
+                  </h1>
+                </div>
+              </a>
             </div>
+
             <div class="col">
-              <div class="card shadow-sm">
-                <a href="/overdose">
+              <a href="/overdose"  class="card shadow-sm">
+
+                <div class="card-img-container">
+                  <img src="../../../assets/World-MapIMG.png" alt="Image" class="card-img-top" />
                   <div class="card-img-overlay">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                      <!-- <title>Placeholder</title> -->
-                      <rect width="100%" height="100%" style="fill: url(#image)" />
-                      <image id="image" href="../../../assets/images.jpeg" width="100%" height="100%" ></image>
-                    </svg>
-                    <div class="read-overlay" style="background-color: rgba(0, 106, 255, 0.231);">
-                      <span style="color: rgb(255, 0, 238);">READ</span>
+                    <div class="read-overlay"
+                    style="background-color: rgba(0, 106, 255, 0.231); box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
+                      <h1 id="read">Read</h1>
                     </div>
                   </div>
-                </a>
-
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-              </div>
+                <div class="card-body" >
+                  <h1>
+                    <span class="underline-heading">Title</span><span class="card-text">   something else....</span>
+                  </h1>
+                </div>
+              </a>
             </div>
           </div>
         </div>
