--- a/src/app/components/stories/stories.component.css
+++ b/src/app/components/stories/stories.component.css
@@ -1,4 +1,5 @@
 
+
   @media (min-width: 992px) {
     .dropdown-toggle.w-lg-auto {
       width: 100%; /* Set the width to 100% for large screens */
@@ -14,17 +15,27 @@
   }
 
   .card {
+    border: none;
     position: relative;
     overflow: hidden;
     border-radius: 0;
-  }
+    display: flex;
+    flex-direction: column; /* Stack child elements vertically */
+    justify-content: space-between; /* Distribute space evenly between the elements */
+    height: 100%; /* Ensure the card takes the full height of the container */
+}
+
 
   .card-img-container {
     position: relative;
+    height: 200px;
   }
 
   .card-img-top{
     border-radius: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .card-img-overlay {
@@ -51,7 +62,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 106, 255, 0.231);
-    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,13 +69,6 @@
     /* transition: opacity 1.3s; */
   }
 
-  .read-overlay h1 {
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 0;
-    /* transition: opacity 0.3s; */
-  }
 
   #read{
     color: rgb(208, 0, 255);
@@ -74,16 +77,42 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 3.5);
   }
 
-  .underline-heading {
-    color: black;
-
-    font-size: 30px;
-  }
   .card-text{
     font-size: 30px;
     color:rgb(107, 107, 109);
-
   }
+
+  /* Remove underline from all elements */
+a, h1.card-text {
+  text-decoration: none !important;
+}
+
+/* Add the animated underline */
+/* .underline-heading {
+  color: black;
+  font-size: 30px;
+  position: relative;
+  text-decoration: underline;
+  text-decoration-color: rgb(8, 8, 223);
+  transition: text-decoration-color 0.3s;
+} */
+
+/* Add the animated underline to the existing underline */
+.underline-heading {
+  color: black;
+  font-size: 30px;
+  position: relative;
+  text-decoration: underline;
+  text-decoration-color: rgb(8, 8, 223);
+  transition: text-decoration-color 1.3s;
+}
+
+/* Apply the animation on hover */
+.underline-heading:hover {
+  text-decoration-color: transparent;
+}
+
+
 
   .card-img-overlay:hover .read-overlay {
     opacity: 1;
